jsonschemadsl2ecore.trafo.opt/test/test103/invalidtests/example13.test103
{
	"prop3prop4":true
}  